#####################
Nagios 2.x Change Log
#####################


2.7 - ??/??/????
----------------
* p1.pl now sets environment var (NAGIOS_PLUGIN) to indicate patch of plugin that is executing
* Updated nagiostats with new MRTG vars for tracking buffer usage
* Added sample MRTG config file
* Minor documentation updates



2.6 - 11/27/2006
----------------
* Fix for unscheduled triggered downtime entries
* Fix for embedded audio in tac and status CGIs
* Fixed bug in nagiostats utility when reporting host/service check latency
* Misc code cleanups for compiler warnings
* Fixed error when reading empty (zero byte) config files
* Default is now to check for orphaned service checks (Francois Caen)
* Fixed bug with non-standard CGI config file location in status data (Carson Gaspar)
* Fixed bugs and simplified examples in sample config files (Mark Young)



2.5 - 07/13/2006
----------------
* Bug fix for excluding hidden files from config file processing
* Bug fix for incorrect links to trends CGI from notification CGI
* Hopefully faster shutdown during host checks
* Lock file is now closed just prior to shutdown, instead of when SIGINT is received
* Bug fix for segfault during startup due to extended service definition duplication
* Bug fix for segfault with wildcards in servicegroup members
* Bug fix for segfault when p1.pl file was missing and embedded Perl interpreter was enabled



2.4 - 05/31/2006
----------------
* Fix for missing <limits.h> include that prevented CGI compilation under Solaris
* Better error message reporting in the command CGI (cmd.cgi)
* Fix for order of recovery/flapping notifications immediately after end of host/service flapping
* Bug fix for potential crash (SIGBUS) of CGIs when reading mmap()'ed status, comment, and downtime files
* Added 'install-unstripped' option to Makefile to allow installing unstripped binaries for debugging
* Minor bug fix to sample redundancy handle-master-proc-event script



2.3.1 - 05/15/2006