@@ -8,6 +8,7 @@ Nagios 2.x Change Log
 * p1.pl now sets environment var (NAGIOS_PLUGIN) to indicate patch of plugin that is executing
 * Updated nagiostats with new MRTG vars for tracking buffer usage
 * Added sample MRTG config file
+* Minor patches to availability and status CGIs
 * Minor documentation updates
 
 
